--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.webp">
+    <link rel="icon" href="./favicon.webp">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Studio Natalia Figueiredo</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
